[gd_scene load_steps=11 format=2]

[ext_resource path="res://ChronomancerCamera.gd" type="Script" id=1]
[ext_resource path="res://ChronomancerLogo.material" type="Material" id=2]
[ext_resource path="res://assets/chronomancer_title.png" type="Texture" id=3]

[sub_resource type="CylinderMesh" id=2]
material = ExtResource( 2 )
height = 0.2
radial_segments = 6

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.439216 )
metallic = 0.3
roughness = 0.2

[sub_resource type="SphereMesh" id=3]
material = SubResource( 8 )

[sub_resource type="ProceduralSky" id=4]
sky_top_color = Color( 0.0392157, 0.333333, 0.470588, 1 )
sky_horizon_color = Color( 0.0392157, 0.686275, 0.803922, 1 )
sky_curve = 0.167946
sky_energy = 3.0
ground_bottom_color = Color( 0.584314, 0.827451, 0.941176, 1 )
ground_horizon_color = Color( 0.0392157, 0.686275, 0.803922, 1 )
ground_curve = 0.12996
ground_energy = 3.0

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true

[sub_resource type="PlaneMesh" id=7]
material = SubResource( 6 )
size = Vector2( 20, 20 )

[node name="ChronomancerLogo" type="Spatial"]

[node name="LogoPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.639453 )
script = ExtResource( 1 )

[node name="ChainlinkMesh" type="CSGCombiner" parent="LogoPivot"]
transform = Transform( 1.85, 0, 0, 0, -7.43094e-08, -1.7, 0, 1.7, -7.43094e-08, 0, 0, 1.79867 )

[node name="OuterMesh" type="CSGMesh" parent="LogoPivot/ChainlinkMesh"]
mesh = SubResource( 2 )

[node name="SubtractionMesh" type="CSGCylinder" parent="LogoPivot/ChainlinkMesh"]
transform = Transform( 0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 0, 0, 0 )
operation = 2
radius = 0.75
height = 0.5
sides = 6
material = ExtResource( 2 )

[node name="CrystalBall" type="MeshInstance" parent="LogoPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.606882 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")

[node name="RotationTween" type="Tween" parent="LogoPivot"]

[node name="ScaleTween" type="Tween" parent="LogoPivot"]

[node name="AlbedoTween" type="Tween" parent="LogoPivot"]

[node name="UpshiftTween" type="Tween" parent="LogoPivot"]

[node name="LogoDownshiftTween" type="Tween" parent="LogoPivot"]

[node name="LoginTween" type="Tween" parent="LogoPivot"]

[node name="TitleTween" type="Tween" parent="LogoPivot"]

[node name="MainTween" type="Tween" parent="LogoPivot"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -3.82074 )

[node name="Backdrop" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 1.50615 )
mesh = SubResource( 7 )

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.686275, 0.94902, 1, 1 )

[node name="Title" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 265.0
margin_top = 358.0
margin_right = 765.0
margin_bottom = 408.0
texture = ExtResource( 3 )

[node name="Login" type="LineEdit" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 327.0
margin_top = 433.0
margin_right = 700.0
margin_bottom = 458.0

[node name="Button" type="Button" parent="Login"]
margin_left = 134.0
margin_top = 40.0
margin_right = 234.0
margin_bottom = 70.0
mouse_default_cursor_shape = 2
text = "Login"
